# misis2024f-24-04-eldashov-v-e

./: .gitignore  CMakeLists.txt  codeforces.id
prj.codeforces/: 0004a.cpp  0069a.cpp  0136a.cpp  0236a.cpp  0271a.cpp  0276a.cpp  0339b.cpp  0363b.cpp  0466a.cpp  0514a.cpp  0617a.cpp  0915a.cpp  0935b.cpp  0978a.cpp  0978b.cpp  1330a.cpp  1352a.cpp  1404a.cpp  1501a.cpp  1512b.cpp  1512c.cpp  1585a.cpp  1670b.cpp  1671a.cpp  1678a.cpp  1680b.cpp  1692c.cpp  1701a.cpp  1717b.cpp  1721b.cpp  1872a.cpp  1873b.cpp  1873c.cpp  1873d.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/arrayd/: arrayd.cpp  arrayd.hpp
prj.lab/arrayt/: arrayt.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/matrixa/: matrixa.cpp  matrixa.hpp
prj.lab/queuea/: queuea.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.lab/stackl/: stackl.hpp
prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_doctest.cpp  complex_doctest.cpp  complex_test.cpp  queue_doctest.cpp  rational_doctest.cpp  rational_test.cpp  stackl_doctest.cpp
prj.test/doctest/extensions/: doctest_mpi.h  doctest_util.h  mpi_reporter.h  mpi_sub_comm.h
prj.test/doctest/parts/: doctest.cpp  doctest_fwd.h
