set(CMAKE_CXX_STANDARD 20)

add_executable(0004a 0004a.cpp)
add_executable(0069a 0069a.cpp)
add_executable(0236a 0236a.cpp)
add_executable(0271a 0271a.cpp)
add_executable(0276a 0276a.cpp)
#add_executable(0281a 0281a.cpp)
add_executable(0339b 0339b.cpp)
add_executable(0363b 0363b.cpp)
add_executable(0466a 0466a.cpp)
add_executable(0514a 0514a.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0978a 0978a.cpp)
add_executable(0978b 0978b.cpp)
add_executable(1330a 1330a.cpp)
add_executable(1352a 1352a.cpp)
add_executable(1404a 1404a.cpp)
add_executable(1512c 1512c.cpp)
add_executable(1670b 1670b.cpp)
add_executable(1671a 1671a.cpp)
add_executable(1701a 1701a.cpp)
add_executable(1717b 1717b.cpp)
add_executable(1721b 1721b.cpp)
add_executable(1872a 1872a.cpp)
add_executable(1873b 1873b.cpp)
add_executable(1873c 1873c.cpp)
add_executable(1873d 1873d.cpp)